--- a/start/welcome.mdx
+++ b/start/welcome.mdx
@@ -1,8 +1,7 @@
 ---
 sidebarTitle: "Welcome"
-title: "Getting Started"
+title: "Welcome"
 description: "Power your server with Ducky, a multipurpose bot focused on seamlessly integrating Discord and ERLC server automation for effortless management."
-tag: "NEW"
 ---
 
 ![Ducky](https://duckybot.xyz/images/banners/footers/Ducky.png)
