--- a/start/setup.mdx
+++ b/start/setup.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Configuring Ducky"
 description: "Learn how to configure Ducky."
+tag: "NEW"
 ---
 
 Once you have invited Ducky to your server, use the **`/setup`** command to start configuring your server. 
