a lot of stuff :yesyes:

--- a/overview/welcome.mdx
+++ b/overview/welcome.mdx
@@ -1,6 +1,5 @@
 ---
-sidebarTitle: "Welcome"
-title: "Welcome"
+title: "Welcome to Ducky"
 description: "Power your server with Ducky, a multipurpose bot focused on seamlessly integrating Discord and ERLC server automation for effortless management."
 ---
 
