--- a/configuration/permissions.mdx
+++ b/configuration/permissions.mdx
@@ -20,8 +20,8 @@ Ducky's role-based permissions can be configured via the first page of the **`/s
 </Accordion>
 
 <Accordion title="Discord Administrator Roles" icon="shield">
-  - **`/lock`:** Members of the configured **Discord Moderator** permission roles are authorized to lock any given channel that they have access to send a message in.
-  - **`/unlock`:** Members of the configured **Discord Moderator** permission roles are authorized to unlock any given channel that they have access to send a message in.
-  - **`/ban`:** Members of the configured **Discord Moderator** permission roles are authorized to ban another member.
-  - **`/unban`:** Members of the configured **Discord Moderator** permission roles are authorized to unban another member.
+  - **`/lock`:** Members of the configured **Discord Administrator** permission roles are authorized to lock any given channel that they have access to send a message in.
+  - **`/unlock`:** Members of the configured **Discord Administrator** permission roles are authorized to unlock any given channel that they have access to send a message in.
+  - **`/ban`:** Members of the configured **Discord Administrator** permission roles are authorized to ban another member.
+  - **`/unban`:** Members of the configured **Discord Administrator** permission roles are authorized to unban another member.
 </Accordion>
