--- a/misc/timestamps.mdx
+++ b/misc/timestamps.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Timestamps"
 description: "Learn how to utilize Discord's timestamps."
-tag: "NEW"
+tag: "WIP"
 ---
 
 The **`{timestamp}`** variable is one of the most confusing variables in Ducky for those who aren't familiar with Discord's formatting style.
