--- a/misc/timestamps.mdx
+++ b/misc/timestamps.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Timestamps"
 description: "Learn how to utilize Discord's timestamps."
-tag: "WIP"
+tag: "NEW"
 ---
 
 The **`{timestamp}`** variable is one of the most confusing variables in Ducky for those who aren't familiar with Discord's formatting style.
@@ -16,4 +16,6 @@ When using the variable without formatting, you'll receive a number such as **17
 - **6:49:07 AM:** `<t:1734608947:T>`
 - **5 seconds ago:** `<t:1734608947:R>`
 
-So, to use the `{timestamp}` variable, you pick one of the formats above, and replace the numbers with `{timestamp}`. Example: `<t:{timestamp}:R>`
+<Warning>
+    Be sure to replace the numbers with the **`{timestamp}`** variable. Example: **`<t:{timestamp}:R>`**.
+</Warning>
