can access -> have access to (trust)

--- a/configuration/permissions.mdx
+++ b/configuration/permissions.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Permissions"
-description: "Learn what each role-based permission level can access via Ducky."
+description: "Learn what each role-based permission level has access to via Ducky."
 ---
 
 Ducky's role-based permissions can be configured via the first page of the **`/setup`** command. More information on what each of these role-based permissions are authorized to access can be found below.
@@ -8,7 +8,7 @@ Ducky's role-based permissions can be configured via the first page of the **`/s
 <Accordion title="Discord Moderator Roles" icon="hammer">
   - **`/purge`:** Members of the configured **Discord Moderator** permission roles are authorized to purge up to **1,000 messages** from any given channel that they have access to send a message in.
   - **`/slowmode`:** Members of the configured **Discord Moderator** permission roles are authorized to modify the slowmode of any given channel that they have access to send a message in.
-  - **`/role`:** Members of the configured **Discord Moderator** permission roles are authorized to view any given role's information, add a role (which they can access, automatically determined based on member/role hierarchy) to another member, and remove a role (which they can access, automatically determined based on member/role hierarchy) from a member.
+  - **`/role`:** Members of the configured **Discord Moderator** permission roles are authorized to view any given role's information, add a role (which they have access to, automatically determined based on member/role hierarchy) to another member, and remove a role (which they have access to, automatically determined based on member/role hierarchy) from a member.
   - **`/case`:** Members of the configured **Discord Moderator** permission roles are authorized to view a specific case and its information. If they are the moderator of a specific case, they are also authorized to void the case.
   - **`/modlogs`:** Members of the configured **Discord Moderator** permission roles are authorized to view the modlogs of another member.
   - **`/nick`:** Members of the configured **Discord Moderator** permission roles are authorized to set another member's nickname.
