--- a/configuration/setup.mdx
+++ b/configuration/setup.mdx
@@ -6,5 +6,5 @@ description: "Learn how to configure Ducky."
 Once you have invited Ducky to your server, use the **`/setup`** command to start configuring your server. 
 
 <Warning>
-  All members with the **Manage Server** permission can access the **`/setup`** command.
+  All members with the **Manage Server** permission have access to the **`/setup`** command.
 </Warning>
