--- a/misc/devmode.mdx
+++ b/misc/devmode.mdx
@@ -1,37 +1,41 @@
 ---
 title: "Developer Mode"
-description: "Learn how to enable developer mode for your Discord account."
+description: "Learn how to enable Developer Mode on Discord."
 tag: "NEW"
 ---
 
+Discord's **Developer Mode** allows you to access role IDs, channel IDs, message IDs, user IDs, and server IDs by right-clicking on one of those objects.
 <Note>
-  Developer Mode allows you to gain access to important features for configuring **Ducky** such as the ability to fetch IDs. Enabling Developer Mode is highly advised.
+  You will likely need this enabled upon contacting the **Ducky Support** team for easy reference.
 </Note>
 
-## Desktop Mode
+## Desktop
 
 <Steps>
-  <Step title="Open Your Settings.">
-    ![Opensettings Pn](/images/opensettings.png)
+  <Step title="Open User Settings">
+    ![Open User Settings](/images/devmode/desktop/settings.png)
   </Step>
-  <Step title="Head Over To Advanced Settings.">
-    ![Image Pn](/images/image.png)
+  <Step title="Select Advanced">
+    ![Select Advanced](/images/devmode/desktop/advanced.png)
   </Step>
-  <Step title="Enable Developer Mode.">
-    ![Image2 Pn](/images/image2.png)
+  <Step title="Enable Developer Mode">
+    ![Enable Developer Mode](/images/devmode/desktop/enable.png)
   </Step>
 </Steps>
 
-## Mobile Mode
+## Mobile
 
 <Steps>
-  <Step title="Go To Your User Profile And Then Settings.">
-    ![IMG 1519 Jpe](/images/IMG_1519.jpeg)
+  <Step title="Open Profile">
+    ![Open Profile](/images/devmode/mobile/profile.png)
   </Step>
-  <Step title="Open The Advanced Settings Catagory.">
-    ![IMG 1521 Jpe](/images/IMG_1521.jpeg)
+  <Step title="Open User Settings">
+    ![Open User Settings](/images/devmode/mobile/settings.png)
   </Step>
-  <Step title="Enable Developer Mode.">
-    ![IMG 1522 Jpe](/images/IMG_1522.jpeg)
+  <Step title="Select Advanced">
+    ![Select Advanced](/images/devmode/mobile/advanced.png)
+  </Step>
+  <Step title="Enable Developer Mode">
+    ![Enable Developer Mode](/images/devmode/mobile/enable.png)
   </Step>
 </Steps>
