for the incompetent people

--- a/tutorials/ingamecmds.mdx
+++ b/tutorials/ingamecmds.mdx
@@ -37,8 +37,8 @@ tag: "NEW"
     <Note>
       Command logs are managed by ERLC, not Ducky. If they randomly stop working, it's likely due to one of the following:
 
-      - A security bot, such as Wick, has deleted the webhook due to embed spam.
-      - The PRC API is experiencing issues.
+      - A security bot, such as Wick, has deleted the webhook due to embed spam. Be sure to whitelist the channel or webhook you created using the appropriate command for the security service you use.
+      - The PRC API is experiencing issues. Nobody but the PRC development team can resolve the issue, so simply be patient and wait for the issue to be resolved.
     </Note>
   </Step>
   <Step title="Configuring with Ducky">
