--- a/modules/erlc.mdx
+++ b/modules/erlc.mdx
@@ -1,6 +1,6 @@
 ---
-title: "ERLC Integrations"
-description: "Learn about Ducky's ERLC Integrations module and how to configure it."
+title: "ERLC Integration"
+description: "Learn about Ducky's ERLC Integration module and how to configure it."
 ---
 
 This page provides the essential configuration options for Ducky's ERLC Integration module, which enables seamless management and monitoring of your ERLC server without needing to join the game. To enable and configure this module, use the `/setup` command and navigate to the ERLC Integration page.
